--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 # book repository
 book.repository.path=src/test/resources/Library.xml
+# book service
+book.service.page.size=5
 # actuators config
 management.endpoints.web.exposure.include=info,health
 management.endpoint.health.show-details=always
