Add pagination to borrowed books view

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # book repository
-book.repository.path=src/test/resources/Library.xml
+book.repository.path=database/Library.xml
 # book service
 book.service.page.size=5
 # actuators config
