Introduce basic authentication

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,9 @@
 book.repository.path=database/Library.xml
 # book service
 book.service.page.size=5
+# authentication
+book.authentication.user=user
+book.authentication.password=passwd
 # actuators config
 management.endpoints.web.exposure.include=info,health
 management.endpoint.health.show-details=always
