--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,9 @@ book.service.page.size=5
 # authentication
 book.authentication.user=user
 book.authentication.password=passwd
-# actuators config
-management.endpoints.web.exposure.include=info,health
+# spring config
+spring.mvc.problemdetails.enabled=true
+management.endpoints.web.exposure.include=info,health,metrics
 management.endpoint.health.show-details=always
 # whitelabel error page
 server.error.whitelabel.enabled=false
