--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
     id 'com.github.ben-manes.versions' version '0.44.0'
 }
 
-group = 'com.nextit'
+group = 'com.book'
 
 def versionMajor = 0
 def versionMinor = 1
