--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,3 +30,11 @@ test-code:
   coverage: "/Total.*?([0-9]{1,3})%/"
   tags:
     - docker
+
+test-with-sonar:
+  stage: test
+  script:
+    - chmod +x gradlew
+    - ./gradlew sonar
+  tags:
+    - docker
