--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,21 +3,25 @@ image: azul/zulu-openjdk:19
 scan-code:
   stage: .pre
   image:
-    name: "zricethezav/gitleaks:v8.15.3"
+    name: "zricethezav/gitleaks:latest"
     entrypoint: [""]
   script:
     - gitleaks detect --verbose --redact --no-git --source="$CI_PROJECT_DIR"
+  rules:
+    - if: ($CI_PIPELINE_SOURCE != "schedule")
   tags:
     - docker
 
 scan-vulnerabilities:
   stage: .pre
   image:
-    name: "aquasec/trivy:0.37.3"
+    name: "aquasec/trivy:latest"
     entrypoint: [""]
   script:
     - trivy fs --no-progress --ignore-unfixed --exit-code 0 $CI_PROJECT_DIR
   allow_failure: true
+  rules:
+    - if: ($CI_PIPELINE_SOURCE != "schedule")
   tags:
     - docker
 
@@ -25,8 +29,10 @@ test-code:
   stage: test
   script:
     - chmod +x gradlew
-    - ./gradlew jacocoTestReport
-    - cat build/reports/jacoco/test/html/index.html
+    - ./gradlew :app:jacocoTestReport
+    - cat app/build/reports/jacoco/test/html/index.html
   coverage: "/Total.*?([0-9]{1,3})%/"
+  rules:
+    - if: ($CI_PIPELINE_SOURCE != "schedule")
   tags:
     - docker
