--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # book repository
-book.repository.path=database/Library.xml
+book.repository.path=../database/Library.xml
 # book service
 book.service.page.size=5
 # authentication
