--- a/.github/workflows/03-run-tests.yml
+++ b/.github/workflows/03-run-tests.yml
@@ -23,11 +23,8 @@ jobs:
     - name: Setup Gradle
       uses: gradle/gradle-build-action@v2.4.0
 
-    - name: Run Tests
-      run: ./gradlew :app:jacocoTestReport
-
-    - name: Run Code Analysis
-      run: ./gradlew :app:sonar
+    - name: Run Tests and Code Analysis
+      run: ./gradlew :app:jacocoTestReport :app:sonar
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
