--- a/.github/workflows/01-bootstrap-aws.yml
+++ b/.github/workflows/01-bootstrap-aws.yml
@@ -15,7 +15,7 @@ jobs:
   bootstrap:
     name: Bootstrap CDK
     runs-on: ubuntu-22.04
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
