--- a/.github/workflows/02-create-aws-environment.yml
+++ b/.github/workflows/02-create-aws-environment.yml
@@ -19,7 +19,7 @@ jobs:
   deploy-network-stack:
     name: Deploy the network stack
     runs-on: ubuntu-22.04
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/master'
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
