--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -24,3 +24,7 @@ mockito-junit = { module = "org.mockito:mockito-junit-jupiter" }
 # code quality
 palantir-javaformat = { module = "com.palantir.javaformat:palantir-java-format", version = "2.29.0" }
 pinterest-ktlint = { module = "com.pinterest:ktlint", version = "0.48.2" }
+# gradle plugins
+diffplug-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version = "6.17.0" }
+sonarqube = { module = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin", version = "4.0.0.2929" }
+cyclonedx-sbom = { module = "org.cyclonedx:cyclonedx-gradle-plugin", version = "1.7.4" }
