--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,8 @@ mockito-junit = { module = "org.mockito:mockito-junit-jupiter" }
 palantir-javaformat = { module = "com.palantir.javaformat:palantir-java-format", version = "2.29.0" }
 pinterest-ktlint = { module = "com.pinterest:ktlint", version = "0.48.2" }
 # gradle plugins
+spring-boot = { module = "org.springframework.boot:spring-boot-gradle-plugin", version = "3.0.6" }
+git-properties = { module = "com.gorylenko.gradle-git-properties:gradle-git-properties", version = "2.4.1" }
 diffplug-spotless = { module = "com.diffplug.spotless:spotless-plugin-gradle", version = "6.18.0" }
 sonarqube = { module = "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin", version = "4.0.0.2929" }
 cyclonedx-sbom = { module = "org.cyclonedx:cyclonedx-gradle-plugin", version = "1.7.4" }
