--- a/.github/workflows/05-build-and-deploy-application.yml
+++ b/.github/workflows/05-build-and-deploy-application.yml
@@ -1,5 +1,5 @@
 # This workflow builds the Docker image for the book-library-service and then deploys the application.
-name: 04 - Build and deploy the application to DockerHub and to AWS
+name: 05 - Build and deploy the application to DockerHub and to AWS
 
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -131,7 +131,7 @@ jobs:
     runs-on: ubuntu-22.04
     name: Deploy the application to AWS
     needs: build-and-publish
-    timeout-minutes: 15
+    timeout-minutes: 20
     concurrency: book-library-service-deployment
     steps:
       - name: Checkout code
@@ -151,7 +151,7 @@ jobs:
           rm -fr node_modules package-lock.json cdk.out
           npm i
 
-      - name: Deploy service stack to staging
+      - name: Deploy service stack
         env:
           DOCKER_IMAGE_TAG: ${{ needs.build-and-publish.outputs.DOCKER_IMAGE_TAG }}
         working-directory: cdk
