--- a/cdk/package.json
+++ b/cdk/package.json
@@ -7,6 +7,8 @@
     "bootstrap": "cdk bootstrap --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.BootstrapApp\"",
     "repository:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --require-approval never",
     "repository:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --force --require-approval never",
+    "cognito:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.CognitoApp\" --require-approval never",
+    "cognito:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.CognitoApp\" --force --require-approval never",
     "network:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.NetworkApp\" --require-approval never",
     "network:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.NetworkApp\" --force --require-approval never",
     "service:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.ServiceApp\" --require-approval never",
