--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -23,6 +23,21 @@ spring:
   mvc:
     problemdetails:
       enabled: true
+  security:
+    oauth2:
+      client:
+        registration:
+          cognito:
+            clientId: ${COGNITO_CLIENT_ID}
+            clientSecret: ${COGNITO_CLIENT_SECRET}
+            scope: openid, profile, email
+            clientName: stratospheric-client
+        provider:
+          cognito:
+            issuerUri: ${COGNITO_PROVIDER_URL}
+
+custom:
+  use-cognito-as-identity-provider: true
 
 auth:
   users:
