--- a/cdk/package.json
+++ b/cdk/package.json
@@ -7,10 +7,12 @@
     "bootstrap": "cdk bootstrap --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.BootstrapApp\"",
     "certificate:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.CertificateApp\" --require-approval never",
     "certificate:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.CertificateApp\" --force --require-approval never",
-    "repository:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --require-approval never",
-    "repository:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --force --require-approval never",
+    "domain:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DomainApp\" --require-approval never",
+    "domain:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DomainApp\" --force --require-approval never",
     "network:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.NetworkApp\" --require-approval never",
     "network:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.NetworkApp\" --force --require-approval never",
+    "repository:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --require-approval never",
+    "repository:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --force --require-approval never",
     "service:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.ServiceApp\" --require-approval never",
     "service:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.ServiceApp\" --force --require-approval never"
   },
