--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,3 @@
-[versions]
-aws-sdk = "1.12.486"
-
 [libraries]
 spring-boot-starter-web = { module = "org.springframework.boot:spring-boot-starter-web" }
 spring-boot-starter-actuator = { module = "org.springframework.boot:spring-boot-starter-actuator" }
@@ -22,7 +19,7 @@ webjars-bootstrap = { module = "org.webjars:bootstrap", version = "5.3.0" }
 webjars-font-awesome = { module = "org.webjars:font-awesome", version = "6.4.0" }
 problem-spring-web = { module = "org.zalando:problem-spring-web", version = "0.29.1" }
 aws-cdk-lib = { module = "software.amazon.awscdk:aws-cdk-lib", version = "2.83.1" }
-aws-sdk-cognito-idp = { module = "com.amazonaws:aws-java-sdk-cognitoidp", version.ref = "aws-sdk" }
+aws-sdk-cognito-idp = { module = "software.amazon.awssdk:cognitoidentityprovider", version = "2.20.83" }
 # code quality
 palantir-javaformat = { module = "com.palantir.javaformat:palantir-java-format", version = "2.32.0" }
 # gradle plugins
