--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,7 +19,10 @@ webjars-bootstrap = { module = "org.webjars:bootstrap", version = "5.3.0" }
 webjars-font-awesome = { module = "org.webjars:font-awesome", version = "6.4.0" }
 problem-spring-web = { module = "org.zalando:problem-spring-web", version = "0.29.1" }
 aws-cdk-lib = { module = "software.amazon.awscdk:aws-cdk-lib", version = "2.83.1" }
-aws-sdk-cognito-idp = { module = "software.amazon.awssdk:cognitoidentityprovider", version = "2.20.83" }
+aws-sdk-bom = { module = "software.amazon.awssdk:bom", version = "2.20.84" }
+aws-sdk-cognito-idp = { module = "software.amazon.awssdk:cognitoidentityprovider" }
+spring-cloud-aws-bom = { module = "io.awspring.cloud:spring-cloud-aws-dependencies", version = "3.0.1" }
+spring-cloud-aws-starter = { module = "io.awspring.cloud:spring-cloud-aws-starter" }
 # code quality
 palantir-javaformat = { module = "com.palantir.javaformat:palantir-java-format", version = "2.32.0" }
 # gradle plugins
