--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -4,8 +4,9 @@ spring:
       client:
         registration:
           cognito:
+            poolId: b-l-s
             clientId: book-library-service
-            clientSecret: 27b07baf-53ba-42c6-b11f-6384769cada3
+            clientSecret: b-l-s-token
             scope: openid, profile, email
             clientName: b-l-s-client
         provider:
