--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -15,6 +15,7 @@ management:
         include: info,health,metrics
 
 server:
+  forward-headers-strategy: framework
   error:
     whitelabel:
       enabled: false
@@ -23,6 +24,10 @@ spring:
   mvc:
     problemdetails:
       enabled: true
+  cloud:
+    aws:
+      region:
+        static: eu-central-1
 
 auth:
   users:
@@ -32,3 +37,6 @@ auth:
     bookuser:
       role: user
       password: userpass
+
+custom:
+  invitation-codes: DUKE, STRATOSPHERIC
