--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,7 +13,7 @@ jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version = "2.15.2"
 jackson-dataformat-xml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml" }
 thymeleaf-layout-dialect = { module = "nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect", version = "3.2.1" }
 thymeleaf-spring-security = { module = "org.thymeleaf.extras:thymeleaf-extras-springsecurity6", version="3.1.1.RELEASE" }
-webjars-locator-core = { module = "org.webjars:webjars-locator-core" }
+webjars-locator-core = { module = "org.webjars:webjars-locator-core", version = "0.53" }
 webjars-bootstrap = { module = "org.webjars:bootstrap", version = "5.3.0" }
 webjars-font-awesome = { module = "org.webjars:font-awesome", version = "6.4.0" }
 problem-spring-web = { module = "org.zalando:problem-spring-web", version = "0.29.1" }
