--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+logging:
+  level:
+    com:
+      book:
+        library:
+          user: DEBUG
+
 book:
   repository:
     path: ../database/Library.xml
