--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,12 +8,13 @@ spring-boot-starter-oauth2-client = { module = "org.springframework.boot:spring-
 spring-boot-starter-thymeleaf = { module = "org.springframework.boot:spring-boot-starter-thymeleaf" }
 spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-starter-test" }
 spring-security-test = { module = "org.springframework.security:spring-security-test" }
+spring-addons-oauth2-test = { module = "com.c4-soft.springaddons:spring-addons-oauth2-test", version = "6.2.0" }
 micrometer-observation-test = { module = "io.micrometer:micrometer-observation-test" }
 database-h2 = { module = "com.h2database:h2" }
 jackson-bom = { module = "com.fasterxml.jackson:jackson-bom", version = "2.15.2" }
 jackson-dataformat-xml = { module = "com.fasterxml.jackson.dataformat:jackson-dataformat-xml" }
 thymeleaf-layout-dialect = { module = "nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect", version = "3.2.1" }
-thymeleaf-spring-security = { module = "org.thymeleaf.extras:thymeleaf-extras-springsecurity6", version="3.1.1.RELEASE" }
+thymeleaf-spring-security = { module = "org.thymeleaf.extras:thymeleaf-extras-springsecurity6", version = "3.1.1.RELEASE" }
 webjars-locator-core = { module = "org.webjars:webjars-locator-core", version = "0.53" }
 webjars-bootstrap = { module = "org.webjars:bootstrap", version = "5.3.0" }
 webjars-font-awesome = { module = "org.webjars:font-awesome", version = "6.4.0" }
