--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.3'
 services:
   keycloak:
-    image: quay.io/keycloak/keycloak:19.0.3-legacy
+    image: quay.io/keycloak/keycloak:21.1
     ports:
       - "8888:8080"
     environment:
       - KEYCLOAK_USER=keycloak
       - KEYCLOAK_PASSWORD=keycloak
       - DB_VENDOR=h2
-      - JAVA_OPTS=-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/tmp/stratospheric-realm.json
+      - JAVA_OPTS=-Dkeycloak.migration.action=import -Dkeycloak.migration.provider=singleFile -Dkeycloak.migration.file=/tmp/b-l-s-realm.json
     volumes:
       - ./src/test/resources/keycloak/b-l-s-realm.json:/tmp/b-l-s-realm.json
