--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -4,15 +4,15 @@ spring:
       client:
         registration:
           cognito:
-            poolId: b-l-s
+            poolId: stratospheric
             clientId: spring-boot-application
-            clientSecret: BZgLD9SHUSMSpcwufCl39ZlFO6u7tODg
+            clientSecret: 27b07baf-53ba-42c6-b11f-6384769cada3
             scope: openid
             clientName: spring-boot-application
             logoutUrl: http://localhost:8888
         provider:
           cognito:
-            issuerUri: http://localhost:8888/realms/b-l-s
+            issuerUri: http://localhost:8888/realms/stratospheric
 
 cloud:
   aws:
