--- a/app/src/main/resources/application-aws.yml
+++ b/app/src/main/resources/application-aws.yml
@@ -7,12 +7,16 @@ spring:
             poolId: ${COGNITO_USER_POOL_ID}
             clientId: ${COGNITO_CLIENT_ID}
             clientSecret: ${COGNITO_CLIENT_SECRET}
+            authorizationGrantType: authorization_code
             scope: openid, profile, email
             clientName: b-l-s-client
             logoutUrl: ${COGNITO_LOGOUT_URL}
         provider:
           cognito:
             issuerUri: ${COGNITO_PROVIDER_URL}
+      resourceServer:
+        jwt:
+          issuerUri: ${COGNITO_PROVIDER_URL}
 
 custom:
   use-cognito-as-identity-provider: true
