feat: Add User Registration and Login with Cognito (#52)
* Add CognitoApp

* Improve CognitoStack

* Extend ServiceApp

* Tidy up the code

* Add OAuth2 dependency

* Define CognitoIdentityProvider

* Introduce RegistrationController

* Move CognitoStack to dedicated package

* Add RegistrationService implementation

* Replace com.amazonaws:aws-java-sdk-cognitoidp with software.amazon.awssdk:cognitoidentityprovider

* Use bom for aws dependencies

* Get rid of aws sdk bom

* Introduce dev profile

* Add sign up link

* Improve register page

* Fix register page

* Add registration codes

* Fix redirection

* Switch to UserService

* Use ktfmt instead of klint for Kotlin formatting

* Use CognitoIdentityProviderClient#adminInitiateAuth

* Add UserService#changePassword

* Use AdminSetUserPasswordRequest

* Improve password validation

* Add UserService#refreshToken

* Add header link for cognito sign in

* Simplify username showing

* Allow stickySessionsEnabled setting

* Rework logout

* Add docker compose with Keycloak

* Rewrite CognitoUserService#changePassword

* Add user pool groups

* Revert CognitoUserService#changePassword changes

* Fix controller tests

* Use sec:authentication

* Use latest keycloak

* Merge stable into feature branch

* Unify controller tests

* Tidy up code

* Change token

* Fix controller tests

* Use generic tokens

* Add CognitoUserServiceTest

* Add Testcontainers badge

* Update Keycloak configuration

* Bump keycloak to version 22.0.0

* Implement OAuth2UserService

* Bump keycloak test-container to version 22.0.0

* Allow security for both aws and dev profiles

* Remove user pool groups creation

---------

Co-authored-by: Branislav Beno <brano.beno@gmail.com>
Co-authored-by: Branislav Beno <branislav.beno@siemens.com>

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+logging:
+  level:
+    com:
+      book:
+        library:
+          user: DEBUG
+
 book:
   repository:
     path: ../database/Library.xml
@@ -15,6 +22,7 @@ management:
         include: info,health,metrics
 
 server:
+  forward-headers-strategy: framework
   error:
     whitelabel:
       enabled: false
@@ -23,12 +31,10 @@ spring:
   mvc:
     problemdetails:
       enabled: true
+  cloud:
+    aws:
+      region:
+        static: eu-central-1
 
-auth:
-  users:
-    bookadmin:
-      role: admin
-      password: adminpass
-    bookuser:
-      role: user
-      password: userpass
+custom:
+  invitation-codes: DUKE, STRATOSPHERIC
