Introduce Query Projections

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -38,6 +38,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+    open-in-view: false
 
 custom:
   invitation-codes: DUKE, STRATOSPHERIC
