fix: Add permissions for sarif files uploading

--- a/.github/workflows/05-build-and-deploy-application.yml
+++ b/.github/workflows/05-build-and-deploy-application.yml
@@ -130,6 +130,8 @@ jobs:
   scan-docker-image:
     name: Check Docker image for vulnerabilities
     runs-on: ubuntu-22.04
+    permissions:
+      security-events: write
     needs: build-and-publish
     steps:
       - name: Checkout Code
