--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -37,7 +37,7 @@ spring:
         static: eu-central-1
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: none
     open-in-view: false
 
 custom:
