Populate database for dev profile

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -18,6 +18,8 @@ spring:
       resourceServer:
         jwt:
           issuerUri: ${spring.security.oauth2.client.provider.cognito.issuerUri}
+  flyway:
+    locations: 'classpath:/dev/db/migration/postgresql'
 
 jwt:
   auth:
