feat: Add connection to a database with Amazon RDS (#80)
* Introduce DatabaseApp

* Extend ServiceApp

* Use SecretValue#unsafeUnwrap

* Use String#formatted

* Introduce Reader

* Introduce LibraryTestApplication

* Rename BookRepository

* Rename BookFileRepository

* Rename main entity class

* Introduce DatabaseApp

* Extend ServiceApp

* Use SecretValue#unsafeUnwrap

* Use String#formatted

* Add Reader entity

* Introduce LibraryTestApplication

* Rename BookRepository

* Rename BookFileRepository

* Rename main entity class

* Apply code formatting

* Add Book Entity

* Introduce BorrowedBook entity

* Rewrite DB init script

* Introduce BaseRepositoryTest

* Extend reader entity

* Finalize ReaderRepositoryTest

* Add DDl for reader initialization

* Add BookRepositoryTest

* Add BorrowedBookRepository

* Make BaseRepositoryTest generic

* Improve BorrowedBookRepositoryTest#testFindAll

* Add BorrowedBookRepositoryTest#testAvailableBooks

* Use pagination

* Rename BookService to BookFileService

* Create BookService bean

* Start BookService implementation

* Introduce Query Projections

* Extend BookService

* Refactor BookServiceTest

* Introduce BookService#availBook

* Validate the DDL schema

* Refactor controllers

* Fix BookRestControllerTest

* Fix BookServiceTest

* Rework BookControllerTest

* Fix BookControllerTest

* Introduce books page

* Reintroduce index page

* Initialize database on application's start up

* Remove database initialization on application's start up

* Simplify test db initialization

* Populate database for dev profile

* Introduce BorrowedBookDto#readerName

* Introduce ReaderDto

* Remove BookMapper

* Use separate dto package

* Remove obsolete persistence classes

* Remove obsolete dto and entity classes

* Switch to correct BorrowedDto

* Fix failing test

* Change borrow-book

* Fix book borrowing


--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,13 +1,4 @@
-logging:
-  level:
-    com:
-      book:
-        library:
-          user: DEBUG
-
 book:
-  repository:
-    path: ../database/Library.xml
   service:
     page:
       size: 5
@@ -35,6 +26,10 @@ spring:
     aws:
       region:
         static: eu-central-1
+  jpa:
+    hibernate:
+      ddl-auto: none
+    open-in-view: false
 
 custom:
   invitation-codes: DUKE, STRATOSPHERIC
