--- a/cdk/package.json
+++ b/cdk/package.json
@@ -13,6 +13,8 @@
     "database:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DatabaseApp\" --force --require-approval never",
     "domain:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DomainApp\" --require-approval never",
     "domain:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DomainApp\" --force --require-approval never",
+    "messaging:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.MessagingApp\" --require-approval never",
+    "messaging:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.MessagingApp\" --force --require-approval never",
     "network:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.NetworkApp\" --require-approval never",
     "network:destroy": "cdk destroy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.NetworkApp\" --force --require-approval never",
     "repository:deploy": "cdk deploy --app \"../gradlew :cdk:run -PmainClass=com.book.library.cdk.DockerRepositoryApp\" --require-approval never",
