--- a/.github/workflows/04-run-tests.yml
+++ b/.github/workflows/04-run-tests.yml
@@ -24,7 +24,7 @@ jobs:
       uses: gradle/gradle-build-action@v2
 
     - name: Run Tests and Code Analysis
-      run: ./gradlew :app:jacocoTestReport :app:sonar
+      run: ./gradlew :app:jacocoTestReport :app:sonar --stacktrace
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
