Reintroduce BookRecommendationService integration test

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -34,4 +34,5 @@ spring:
 custom:
   invitation-codes: DUKE, STRATOSPHERIC
   sharing-queue: bls-book-sharing
+  use-real-sqs-listener: true
   auto-confirm-collaborations: false
