Add SES service

--- a/app/src/main/resources/application-dev.yml
+++ b/app/src/main/resources/application-dev.yml
@@ -29,3 +29,4 @@ jwt:
 custom:
   auto-confirm-recommendations: true
   use-cognito-as-identity-provider: false
+  external-url: http://localhost:8080
