--- a/app/src/main/resources/application-aws.yml
+++ b/app/src/main/resources/application-aws.yml
@@ -17,6 +17,8 @@ spring:
       resourceServer:
         jwt:
           issuerUri: ${COGNITO_PROVIDER_URL}
+  flyway:
+    locations: 'classpath:/dev/db/migration/postgresql'
 
 custom:
   use-cognito-as-identity-provider: true
