feat: Recommend books with Amazon SQS and Amazon SES (#101)
* Introduce MessagingApp

* Add message:deploy to GitHub Actions

* Use MessagingOutputParameters for env variables

* Allow localstack for local development

* Fix LocalStackContainer initialization

* Add SqSTemplate spring bean

* Extend AnyBookDto

* Introduce BookDataServiceTest

* Introduce list of offered

* Show list of offered

* Introduce BorrowedBookExtendedDto

* Introduce RecommendedBookDto

* Introduce BookRecommendationRequest

* Add BookRecommendationRequestRepository#existsByBookAndRecommenced

* Finish BookRecommendationService#recommendBookTo

* Introduce BookRecommendationServiceTest

* Introduce BookRecommendationListener

* Manually declare test dependency

* Reduce BookRecommendationServiceTest

* Refactor BookRecommendationServiceTest

* Add io.awspring.cloud:spring-cloud-aws-autoconfigure

* run gradle on CI with --stacktrace

* Revert "run gradle on CI with --stacktrace"

This reverts commit 6849dcc5cd7f315c8e871688e4d7533c3aaf67cd.

* Revert "Add io.awspring.cloud:spring-cloud-aws-autoconfigure"

This reverts commit c3626fd15ea8f97fce6a776d1e87489124cc797c.

* Use SpringBootTest.WebEnvironment.RANDOM_PORT

* Extend AbstractTestResources

* Reintroduce BookRecommendationService integration test

* Introduce DefaultBookRecommendationListener

* Extend BookRecommendationServiceTest

* Add AllowSendingEmails policy

* Add MailSender

* Add SES service

* Add ReaderRepository#findByEmail

* Add BookRecommendationRequestRepository#findByBookIdAndRecommencedId

* Extend entities

* Complement BookRecommendationServiceTest

* Introduce BookRecommendationControllerTest

* Verify emails

* Switch to java 21

* Use KtfmtConfig#kotlinlangStyle

* Add mail verifying

* Update BookRecommendationControllerTest

---------

Co-authored-by: Branislav Beno <brano.beno@gmail.com>
Co-authored-by: Branislav Beno 

--- a/app/src/main/resources/application-aws.yml
+++ b/app/src/main/resources/application-aws.yml
@@ -21,4 +21,5 @@ spring:
     locations: 'classpath:/dev/db/migration/postgresql'
 
 custom:
+  recommendation-queue: ${BLS_RECOMMENDATION_QUEUE_NAME}
   use-cognito-as-identity-provider: true
