--- a/.github/workflows/03-create-app-environment.yml
+++ b/.github/workflows/03-create-app-environment.yml
@@ -15,6 +15,32 @@ on:
         default: 'staging'
 
 jobs:
+  deploy-messaging-stack:
+    name: Deploy the messaging stack
+    runs-on: ubuntu-22.04
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Set up JDK
+        uses: actions/setup-java@v3
+        with:
+          java-version: '21'
+          distribution: 'zulu'
+          cache: 'gradle'
+
+      - name: NPM install
+        working-directory: cdk
+        run: |
+          npm i -D aws-cdk@latest
+          rm -fr node_modules package-lock.json cdk.out
+          npm i
+
+      - name: Deploy messaging stack
+        working-directory: cdk
+        run: npm run messaging:deploy -- -c environmentName=${{ github.event.inputs.environmentName }}
+
   deploy-database-stack:
     name: Deploy the RDS stack
     runs-on: ubuntu-22.04
