--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,12 +11,15 @@ spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-star
 spring-boot-devtools = { module = "org.springframework.boot:spring-boot-devtools" }
 spring-boot-testcontainers = { module = "org.springframework.boot:spring-boot-testcontainers" }
 spring-security-test = { module = "org.springframework.security:spring-security-test" }
+junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 micrometer-observation-test = { module = "io.micrometer:micrometer-observation-test" }
 testcontainers-bom = { module = "org.testcontainers:testcontainers-bom", version = "1.19.3" }
 testcontainers-common = { module = "org.testcontainers:testcontainers" }
 testcontainers-junit-jupiter = { module = "org.testcontainers:junit-jupiter" }
 testcontainers-postgresql = { module = "org.testcontainers:postgresql" }
+testcontainers-localstack = { module = "org.testcontainers:localstack" }
 testcontainers-keycloak = { module = "com.github.dasniko:testcontainers-keycloak", version = "3.2.0" }
+org-awaitility = { module = "org.awaitility:awaitility", version = "4.2.0" }
 database-postgresql = { module = "org.postgresql:postgresql" }
 flyway-core = { module = "org.flywaydb:flyway-core" }
 thymeleaf-layout-dialect = { module = "nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect", version = "3.3.0" }
@@ -26,7 +29,9 @@ webjars-bootstrap = { module = "org.webjars:bootstrap", version = "5.3.2" }
 webjars-font-awesome = { module = "org.webjars:font-awesome", version = "6.4.2" }
 problem-spring-web = { module = "org.zalando:problem-spring-web", version = "0.29.1" }
 spring-cloud-aws-bom = { module = "io.awspring.cloud:spring-cloud-aws-dependencies", version = "3.0.3" }
-spring-cloud-aws-starter = { module = "io.awspring.cloud:spring-cloud-aws-starter" }
+spring-cloud-aws-sqs = { module = "io.awspring.cloud:spring-cloud-aws-starter-sqs" }
+spring-cloud-aws-ses = { module = "io.awspring.cloud:spring-cloud-aws-starter-ses" }
+spring-cloud-aws-dynamodb = { module = "io.awspring.cloud:spring-cloud-aws-starter-dynamodb" }
 aws-sdk-cognito-idp = { module = "software.amazon.awssdk:cognitoidentityprovider" }
 aws-cdk-lib = { module = "software.amazon.awscdk:aws-cdk-lib", version = "2.113.0" }
 # code quality
