Export tracing table name

--- a/app/src/main/resources/application-aws.yml
+++ b/app/src/main/resources/application-aws.yml
@@ -22,4 +22,5 @@ spring:
 
 custom:
   recommendation-queue: ${BLS_RECOMMENDATION_QUEUE_NAME}
+  tracing-table: ${BLS_TRACING_TABLE}
   use-cognito-as-identity-provider: true
