feat: Trace user actions with Amazon DynamoDB (#114)
* Add DynamoDB stack

* Prepare classes for user tracing

* Introduce IndexController

* Fix request mapping

* Extend local development config

* Introduce TraceDaoTest

* Improve TraceDaoTest

* Export tracing table name

* Remove unnecessary configuration

* Remove another unnecessary configuration

* Rearrange ContainersConfig

---------

Co-authored-by: Branislav Beno <brano.beno@gmail.com>

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -32,9 +32,10 @@ spring:
     open-in-view: false
 
 custom:
-  invitation-codes: DUKE, STRATOSPHERIC
+  invitation-codes: DUKE, MIKE
   recommendation-queue: bls-book-recommendation
+  tracing-table: bls-local-breadcrumb
   use-real-sqs-listener: true
   auto-confirm-recommendations: false
-  confirm-email-from-address: noreply@b-l-s.clic
+  confirm-email-from-address: noreply@b-l-s.click
   external-url: https://app.b-l-s.click
