feat: Monitoring Metrics with Amazon CloudWatch (#126)
* Send metrics from AWS services

* Introduce RegistrationService

* Add CDK monitoring stack

---------

Co-authored-by: Branislav Beno <brano.beno@gmail.com>

--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -11,6 +11,15 @@ management:
     web:
       exposure:
         include: info,health,metrics
+  cloudwatch:
+    metrics:
+      export:
+        enabled: true
+        namespace: b-l-s
+        step: 1m
+  metrics:
+    tags:
+      environment: ${ENVIRONMENT_NAME}
 
 server:
   forward-headers-strategy: framework
